[tool.poetry]
name = "deshima-env"
version = "2024.8.0"
description = "Environment for DESHIMA reduction and analysis"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
decode = "^2024.8"
demerge = "^2024.8"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ipython = "^8.18"
notebook = "^7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
